--- a/Block_IT2.html
+++ b/Block_IT2.html
@@ -36,24 +36,27 @@
           <h2 lang-code="02022">.Naša odbornosť</h2>
           <p lang-code="02023">.Naše služby testovania softvéru zaisťujú bezchybný výkon. Poskytujeme komplexné zabezpečenie kvality, automatizované testovanie a testovanie výkonu, čo zaručuje, že váš softvér bude fungovať bez problémov a prekročí vaše očakávania.</p>
           <a href="#id-IT4-odbornost" class="it2-arrow-link">
+            <span class="it2-arrow-text animate-text-underline">Čítať ďalej</span>
             <svg class="it2-arrow" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
               <use href="#id-it2-arrow" />
             </svg>
           </a>
         </div>
+
         <div class="it2-grid-item-pic p3">
           <img src="media/Gestikulacia_Kriz.avif" alt="Obrázok P2" />
         </div>
-
         <div class="it2-grid-item-txt t1" id="id-IT2-nearshoring-back" style="scroll-margin-top: 80px;">
           <h2 lang-code="02024">.Výhody IT Nearshoring</h2>
           <p lang-code="02025">.Pozdvihnite svoje podnikanie pomocou našich služieb vývoja softvéru. Ponúkame riešenia na mieru, vývoj webu a aplikácií a robustné softvérové inžinierstvo na podporu inovácií a rastu.</p>
           <a href="#id-IT3-nearshoring" class="it2-arrow-link">
+            <span class="it2-arrow-text animate-text-underline">Čítať ďalej</span>
             <svg class="it2-arrow" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
               <use href="#id-it2-arrow" />
             </svg>
           </a>
         </div>
+
         <div class="it2-grid-item-pic p2">
           <img src="media/DvajaPriNotebookoch.avif" alt="Obrázok P3" />
         </div>
@@ -61,6 +64,7 @@
           <h2 lang-code="02026">.IT riešenia na mieru</h2>
           <p lang-code="02027">.Naša odbornosť v oblasti riadenia IT projektov zaisťuje, že technologické projekty sú správne riadené. Poskytujeme strategické plánovanie, tímovú koordináciu a efektívnu realizáciu pre úspešné IT projekty.</p>
           <a href="#id-IT5-it-riesenia" class="it2-arrow-link">
+            <span class="it2-arrow-text animate-text-underline">Čítať ďalej</span>
             <svg class="it2-arrow" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
               <use href="#id-it2-arrow" />
             </svg>
