--- a/Block_IT4.html
+++ b/Block_IT4.html
@@ -23,7 +23,7 @@
       <!-- <h3 lang-code="02041">.ODBORNOSŤ</h3> -->
       <div class="it3-heading-back-row">
         <h3 lang-code="02041">.ODBORNOSŤ</h3>
-        <a href="#id-IT2-odbornost-back" style="color: #AAF;">back"</a>
+        <a href="#id-IT2-odbornost-back" style="color: #AAF;">back</a>
       </div>
       <h1 lang-code="02042">.Naša odbornosť</h1>
       <div class="it3-grid">
@@ -51,6 +51,13 @@
           <div class="it3-grid-item-line"></div>
           <p lang-code="02048">.Pochopte náš záväzok týkajúci sa bezpečnosti údajov a dodržiavania predpisov, aby ste zabezpečili ochranu vašich citlivých informácií. Uisťujeme vás, že naša oddanosť dodržiavaniu najvyšších štandardov ochrany údajov vám poskytne potrebnú bezpečnosť pre úspešné a spoľahlivé partnerstvo.</p>
         </div>
+      </div>
+      <div class="it3-more-info-container">
+        <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" lang-code="02049" class="animate-text-underline" style="
+                --text-color: #a8cfff;
+                --hover-color: #ffffff;
+                --underline-color: #ffffff;">
+          .Viac informácií</a>
       </div>
     </div>
   </div>
