--- a/Block_IT5.html
+++ b/Block_IT5.html
@@ -21,7 +21,7 @@
       <!-- <h3 lang-code="02051">.IT RIEŠENIA</h3> -->
       <div class="it3-heading-back-row">
         <h3 lang-code="02051">.IT RIEŠENIA</h3>
-        <a href="#id-IT2-it-riesenia-back" style="color: #AAF;">back"</a>
+        <a href="#id-IT2-it-riesenia-back" style="color: #AAF;">back</a>
       </div>
 
       <h1 lang-code="02052">.IT riešenia na mieru</h1>
@@ -50,6 +50,9 @@
           <div class="it3-grid-item-line"></div>
           <p lang-code="02058">.Zistite, ako sa naše nearshoringové služby môžu prispôsobiť vášmu obchodnému rastu a poskytovať škálovateľné IT riešenia. Ak si vyberiete nás, robíte strategickú investíciu do dlhodobého partnerstva, ktorá podporuje udržateľný rast a úspech.</p>
         </div>
+      </div>
+      <div class="it3-more-info-container">
+        <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="02059">Viac informácií</a>
       </div>
     </div>
   </div>
