--- a/Block_Ref.html
+++ b/Block_Ref.html
@@ -2,19 +2,12 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Block_Ref.html</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" href="favicona-enitech.png">
+  <title>Block_Ref.html</title>
   <style> html { scroll-behavior: smooth; } </style>
   <link rel="stylesheet" href="fonts-poppins.css" />
   <link rel="stylesheet" href="fonts-open-sans.css">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
-    }
-  </style>
 
   <link rel="stylesheet" href="root.css">
   <link rel="stylesheet" href="ref.css">
@@ -22,281 +15,75 @@
   <script src="Language.js" defer></script>
 </head>
 <body>
+  <h1>Referencie</h1>
   <div id="Ref-div-src">
-    <div id="id-Block_Ref" style="scroll-margin-top: 80px;"></div>
-    <div class="referencie-body">
-      <div class="referencie-grid">
-        <!-- 20 položiek (5 riadkov x 4 stĺpce) -->
-        <!-- Prvú položku ukážeme ako príklad, ostatné môžeš skopírovať -->
+    <div id="id-Block_Ref"></div>
+    <div class="ref-body">
+      <h1 class="ref-popis" lang-code="07002">.Referencie hovoria za nás</h1>
+      <p class="ref-popis" lang-code="07003">
+        .Od vzniku sa nám podarilo nadviazať dlhodobú spoluprácu s viac ako 30 zákazníkmi z rôznych krajín sveta.
+      </p>
+      <p class="ref-popis" lang-code="07004">
+        .Nahliadnite na jednotlivé realizované služby pre našich klientov.
+      </p>
 
-        <!-- 1. stvorica -->
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">.Realizované služby:</strong></p>
-              <p>výťahy a eskalátory</p>
-            </div>
+      <div class="ref-grid1">
+        
+        <!-- Prvy blok grid2 -->
+        <div class="ref-grid2">
+          <div class="ref-p1">
+            <img src="media/close-up-woman-electric-car.avif" alt="Automobilový priemysel" />
+            <div class="ref-triangle"></div>
           </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Schindler</div>
+          <div class="ref-t2">
+            <div class="ref-text">
+              <h2 lang-code="07011">.Letecký priemysel</h2>
+              <p lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</p>
+            </div>
+            <a href="#id-Block_Ref2" class="ref-button" lang-code="07019">Viac</a>
+          </div>
+          <div class="ref-t1">
+            <div class="ref-text">
+              <h2 lang-code="07013">.Automobilový priemysel</h2>
+              <p lang-code="07014">.Plne automatizované bunky a linky pre automobilový priemysel</p>
+            </div>
+            <a href="#id-Block_Ref1" class="ref-button" lang-code="07019">Viac</a>
+          </div>
+          <div class="ref-p2">
+            <img src="media/airplane-sky.avif" alt="Letecký priemysel" />
+            <div class="ref-triangle"></div>
           </div>
         </div>
 
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>interiérové komponenty lietadiel</p>
-            </div>
+        <!-- Druhy blok grid2 -->
+        <div class="ref-grid2">
+          <div class="ref-p1">
+            <img src="media/TriEskalatory.avif" alt="Všeobecné strojárstvo" />
+            <div class="ref-triangle"></div>
           </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">AIRBUS</div>
+          <div class="ref-t2">
+            <div class="ref-text">
+              <h2 lang-code="07015">.IT oblasť</h2>
+              <p lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</p>
+            </div>
+            <a href="#id-Block_Ref4" class="ref-button" lang-code="07019">Viac</a>
+          </div>
+          <div class="ref-t1">
+            <div class="ref-text">
+              <h2 lang-code="07017">.Všeobecné strojárstvo</h2>
+              <p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
+            </div>
+            <a href="#id-Block_Ref3" class="ref-button" lang-code="07019">Viac</a>
+          </div>
+          <div class="ref-p2">
+            <img src="media/standard-quality-control-concept-m2.avif" alt="IT oblasť" />
+            <div class="ref-triangle"></div>
           </div>
         </div>
 
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>podvozky a prevodové ústrojenstvo</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Magna Steyr</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>turbodúchadlá</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Honeywell</div>
-          </div>
-        </div>
-
-        <!-- 2. stvorica -->
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>výrobné zariadenia pre automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">TMS - Turnkey manufacturing systems</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>výrobné zariadenia pre gumárenský priemysel</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">KONŠTRUKTA</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>robotické systémy</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">KUKA</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software pre automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Atos</div>
-          </div>
-        </div>
-
-        <!-- 3. stvorica -->
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj automobilových komponentov</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">EDAG</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Škoda Auto</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">BMW</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Audi</div>
-          </div>
-        </div>
-
-        <!-- 4. stvorica -->
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>stroje na výrobu plastových komponentov</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">KraussMaffei</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>klimatizačné jednotky</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">DAIKIN INDUSTRIES</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>plechové komponenty</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">HESTEGO</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software pre letecký a kozmický priemysel </p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">SIEMENS</div>
-          </div>
-        </div>
-
-        <!-- 5. stvorica -->
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj softwaru pre rôzne oblasti</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Active Solution</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software v oblasti bankovníctva</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">Reiffeisen</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/cellent-logo-enitech-1.png" alt="CELLENT logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software v oblasti bankovníctva</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">CELLENT</div>
-          </div>
-        </div>
-
-        <div class="referencie-item-wrap">
-          <div class="referencie-item">
-            <img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="referencie-image" />
-            <div class="referencie-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj softwaru pre Rakúsku štátnu správu</p>
-            </div>
-          </div>
-          <div class="referencie-company-item">
-            <div class="referencie-company">BRZ - Bundesrechenzentrum</div>
-          </div>
-        </div>
       </div>
     </div>
-   </div>
-
+  </div>
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
       // Načítanie prekladov po načítaní DOM
@@ -304,6 +91,5 @@
       await UpdateTexts();
     });
   </script>
-
-  </body>
+</body>
 </html>
