--- a/Block_Ref3.html
+++ b/Block_Ref3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Block_Ref1.html</title>
+  <title>Block_Ref3.html</title>
   <link rel="icon" href="favicona-enitech.png">
   <style> html { scroll-behavior: smooth; } </style>
   <link rel="stylesheet" href="fonts-poppins.css" />
@@ -18,196 +18,22 @@
 
   <link rel="stylesheet" href="root.css">
   <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="ref1.css">
+  <link rel="stylesheet" href="ref3.css">
   <link rel="stylesheet" href="ref-ovl.css">
 
   <script src="Language.js" defer></script>
   <script src="animator.js" defer></script>
 </head>
 <body>
-  <div id="Ref1-div-src">
-    <div id="id-Block_Ref1" style="scroll-margin-top: 80px;"></div>
-    <div class="ref1-body">
-      <div class="ref1-animate-line"></div>
-        <h2 lang-code="07013">.Automobilový priemysel</h2>
-        <p lang-code="07014">.Plne automatizované bunky a linky pre automobilový priemysel</p>
+  <div id="Ref3-div-src">
+    <div id="id-Block_Ref3" style="scroll-margin-top: 80px;"></div>
+    <div class="ref3-body">
+      <div class="ref3-animate-line"></div>
+      <h2 lang-code="07017">.Všeobecné strojárstvo</h2>
+      <p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
       <div class="ref-ovl-grid">
 
         <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Audi</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">BMW</div>
-          </div>
-        </div>
-
-		<div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj automobilových komponentov</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">EDAG</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>podvozky a prevodové ústrojenstvo</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Magna Steyr</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>výrobné zariadenia pre automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">TMS - Turnkey manufacturing systems</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Audi</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/ford-logo-transp.png" alt="Ford logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Ford</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/honda-logo-transp.png" alt="Honda logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Honda</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Mercedes-Benz</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Mini</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/porsche-logo-transp.png" alt="Porsche logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Porsche</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/rolls-royce-logo-transp.png" alt="Rolls royce logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Rolls royce</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/volkswagen-logo-transp.png" alt="Volkswagen logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Volkswagen</div>
-          </div>
-        </div>
-
-
-
-
-
-
-        <!-- <div class="ref-ovl-item-wrap">
           <div class="ref-ovl-item">
             <img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
             <div class="ref-ovl-overlay">
@@ -349,7 +175,11 @@
             <div class="ref-ovl-company">Tagueri</div>
           </div>
         </div>
- -->
+
+
+
+
+
         <!-- <div class="ref-ovl-item-wrap">
           <div class="ref-ovl-item">
             <img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
