--- a/Block_IT3.html
+++ b/Block_IT3.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Block_IT3.html</title>
   <link rel="icon" href="favicona-enitech.png" />
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500,700&display=swap" rel="stylesheet" /> -->
-
   <link rel="stylesheet" href="fonts-poppins.css" />
   <link rel="stylesheet" href="fonts-open-sans.css">
   <link rel="stylesheet" href="animator.css">
@@ -49,6 +47,9 @@
           <div class="it3-grid-item-line"></div>
           <p lang-code="02037">.Zistite, ako môže nearshoring znížiť náklady na vývoj IT pri zachovaní štandardov vysokej kvality. Využitím výhod nearshoringu môžu spoločnosti dosiahnuť značné úspory a zároveň zabezpečiť dodávku špičkových softvérových riešení.</p>
         </div>
+      </div>
+      <div class="it3-more-info-container">
+        <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="02039">Viac informácií</a>
       </div>
     </div>
   </div>
