--- a/indexRef.html
+++ b/indexRef.html
@@ -19,8 +19,13 @@
   <link rel="stylesheet" href="UvodHero.css">
   <link rel="stylesheet" href="ref.css">
   <link rel="stylesheet" href="ref1.css">
+  <link rel="stylesheet" href="ref2.css">
+  <link rel="stylesheet" href="ref3.css">
+  <link rel="stylesheet" href="ref4.css">
+  <link rel="stylesheet" href="ref-ovl.css">
   <link rel="stylesheet" href="footer.css">
 
+  <!-- <script src="ref1.js"></script> -->
   <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
   <script src="Language.js" defer></script>  <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
   <script src="animator.js" defer></script> <!-- funkcie js: animacie -->
@@ -35,16 +40,25 @@
 
   <div">
     <section class="uvod-hero" style="background-image: url('media/flat-lay-business-concept.avif');">
-      <div class="uvod-hero-content" id="kariera_animate-id">
+      <div class="uvod-hero-content" id="referencie_animate-id">
         <h1 lang-code="07001">.Referencie</h1>
       </div>
     </section>
   </div>
   
+  <div id="Ref-div-dst">
+  </div>
+
   <div id="Ref1-div-dst">
   </div>
 
-  <div id="Ref-div-dst">
+  <div id="Ref2-div-dst">
+  </div>
+
+  <div id="Ref3-div-dst">
+  </div>
+
+  <div id="Ref4-div-dst">
   </div>
 
   <div id="Footer-div-dst">
@@ -56,10 +70,13 @@
   <script> 
     async function loadDivBlocks() {
       const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
-      const p2 = ImportDiv("Block_Ref1.html", "Ref1-div-src", "Ref1-div-dst");
-      const p3 = ImportDiv("Block_Ref.html", "Ref-div-src", "Ref-div-dst");
-      const p4 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4]); // vsetky ImportDiv mozu bezat paralelne
+      const p2 = ImportDiv("Block_Ref.html", "Ref-div-src", "Ref-div-dst");
+      const p3 = ImportDiv("Block_Ref1.html", "Ref1-div-src", "Ref1-div-dst");
+      const p4 = ImportDiv("Block_Ref2.html", "Ref2-div-src", "Ref2-div-dst");
+      const p5 = ImportDiv("Block_Ref3.html", "Ref3-div-src", "Ref3-div-dst");
+      const p6 = ImportDiv("Block_Ref4.html", "Ref4-div-src", "Ref4-div-dst");
+      const p7 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+      await Promise.all([p1, p2, p3, p4, p5, p6, p7]);
     }
    </script>
 
@@ -75,8 +92,13 @@
       await LoadTranslations('translations09-foot.txt');
       await UpdateTexts();
       await new Promise(requestAnimationFrame);
-      Animator.register("#kariera_animate-id", "animate-slide-in-bounce");
-      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
+      Animator.register("#referencie_animate-id", "animate-slide-in-bounce");
+      Animator.registerAll(".ref1-animate-line", "animate-width-grow");
+      Animator.registerAll(".ref2-animate-line", "animate-width-grow");
+      Animator.registerAll(".ref3-animate-line", "animate-width-grow");
+      Animator.registerAll(".ref4-animate-line", "animate-width-grow");
+      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+    //   refShowCompany('schindler');
       restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
       document.body.style.visibility = "visible"; // zobraz stránku až teraz    
     });    
